<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_meals"
            android:icon="@drawable/liste_meals"
            android:title="@string/header_text"/>

        <item android:id="@+id/nav_donnation"
            android:icon="@drawable/donnation"
            android:title="@string/donation"/>
        <item android:id="@+id/nav_cart"
            android:icon="@drawable/shopping_cart"
            android:title="@string/cart"/>
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"/>
    </group>

</menu>